--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="firstcomponent"></div>
-    <div id="second"></div>
+    <hr>
+    <div id="second">
+        I am empty.
+    </div>
 </body>
 </html>
